[package]
name = "icp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnntw = "0.2.3"
kd-tree = { version = "0.4.2", features = ["nalgebra"] }
logos = "0.12.1"
memmap = "0.7.0"
nalgebra = "0.31.2"
nom = "7.1.1"
num-traits = "0.2.15"

[features]
